<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <groupId>dumb</groupId>
    <artifactId>metanarchy</artifactId>
    <version>1.0</version>

    <properties>
        <jvmArgs>--enable-native-access=ALL-UNNAMED</jvmArgs>
        <project.build.outputTimestamp>1</project.build.outputTimestamp>
    </properties>

	<!-- https://alex.nederlof.com/blog/2013/07/08/using-git-submodules-for-maven-artifacts-not-in-central/ -->
	<modules>
        <module>jcog</module>
        <module>spacegraph</module>
        <module>narchy</module>
    </modules>
    
    <build>
		<plugins>
            <plugin>
                <groupId>io.takari</groupId>
                <artifactId>maven-wrapper</artifactId>
                <version>0.5.6</version>
                <configuration>
                    <mavenVersion>3.9.6</mavenVersion>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.openrewrite.maven</groupId>-->
<!--                <artifactId>rewrite-maven-plugin</artifactId>-->
<!--                <version>5.42.0</version>-->
<!--            </plugin>-->
		     <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <enablePreview>true</enablePreview>
                    <useIncrementalCompilation>false</useIncrementalCompilation>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>1.16.1</version>
                <dependencies>
                    <dependency>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-junit5-plugin</artifactId>
                        <version>1.2.1</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <targetClasses>
                        <param>jcog.*</param>
                        <param>narchy.*</param>
                        <param>spacegraph.*</param>
                    </targetClasses>
                    <targetTests>
                        <param>jcog.*Test</param>
                        <param>narchy.*Test</param>
                        <param>spacegraph.*Test</param>
                    </targetTests>
                    <outputFormats>
                        <outputFormat>XML</outputFormat>
                        <outputFormat>HTML</outputFormat>
                    </outputFormats>
                    <verbose>true</verbose>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.18.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <rules>
                        <dependencyConvergence/>
                        <banDuplicatePomDependencyVersions/>
                    </rules>
                    <detail>true</detail>
                </configuration>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.3</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>7.1.1</version>
                <configuration>
                    <failBuildOnCVSS>0</failBuildOnCVSS>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <Build-Time>${maven.build.timestamp}</Build-Time>
                        </manifestEntries>
                    </archive>
                    <outputTimestamp>${project.build.outputTimestamp}</outputTimestamp>
                </configuration>
            </plugin>

		</plugins>
    </build>

</project>